Fixed About section alignment and text size.

--- a/myresume/src/components/About/About.css
+++ b/myresume/src/components/About/About.css
@@ -1,13 +1,31 @@
 .about-container {
+  display: flex;
+  flex-direction: column;
   padding-bottom: 1rem;
   background-color: #fff;
 }
 
 .about-container-title{
-  font-size: 2rem;
+  display: flex;
+  justify-content: center;
 }
 
-.about-container-title::first-letter{
-  font-size: 2.5em;
+.about-container-title span {
+  font-size: 4rem;
+}
+
+.about-container-title span::first-letter {
+  font-size: 8rem;
   font-style: italic;
+  font-weight: normal;
+}
+
+.about-container-text {
+  display: flex;
+  justify-content: center;
+}
+
+.about-container-text p {
+  width: 80%;
+  font-size: 1.5rem;
 }
